💥 Rename collectors to agents
